# termplt

./: CLAUDE.md  Cargo.toml  IMPROVEMENTS.md  LICENSE  README.md
.claude/agent-memory/low-hanging-fruit-fixer/: MEMORY.md
.claude/agent-memory/unit-test/: MEMORY.md
.github/workflows/: ci.yml  release.yml
scripts/: generate_test_data.py
src/: kitty_graphics.rs  lib.rs  main.rs  plotting.rs  terminal_commands.rs  text.rs  window_ctrl.rs
src/kitty_graphics/: ctrl_seq.rs  encoding.rs  images.rs  png_imgs.rs  rgb_imgs.rs  rgba_imgs.rs  term_ctrl.rs
src/plotting/: axes.rs  canvas.rs  colors.rs  common.rs  graph.rs  graph_limits.rs  grid_lines.rs  limits.rs  line.rs  line_positioning.rs  marker.rs  markers.rs  numbers.rs  point.rs  series.rs  styles.rs  text.rs
src/terminal_commands/: csi_cmds.rs  images.rs  kitty_cmds.rs  responses.rs
src/text/: text.rs
