[package]
name = "termplt"
version = "0.1.1"
edition = "2024"
description = "A Rust library for rendering 2D plots directly in Kitty-compatible terminals"
license = "MIT"
repository = "https://github.com/EdCarney/termplt"
keywords = ["terminal", "plotting", "kitty", "graphs", "cli"]
categories = ["command-line-utilities", "visualization"]
exclude = ["test_data/", "scripts/", ".claude/", "CLAUDE.md"]

[[bin]]
name = "termplt"
path = "src/bin/termplt.rs"

[dependencies]
crossterm = "0.29.0"
image = "0.25.6"
libc = "0.2.172"
nix = { version = "0.30.1", features = [ "ioctl" ] }
rgb = "0.8.50"
